--- a/.env
+++ b/.env
@@ -29,6 +29,6 @@ APP_SECRET=5872b0c62242bff6d27845d26da27f93
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-DATABASE_URL="mysql://root:@127.0.0.1:3306/food_to_you?serverVersion=5.7"
+DATABASE_URL="mysql://root:root@127.0.0.1:8889/food_to_you?serverVersion=5.7"
 # DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
